--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   },
   "require": {
     "pimcore/data-hub": "^1.6",
+    "pimcore/data-importer": "^1.8",
     "pimcore/pimcore": "^10.5"
   },
   "require-dev": {
