--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
     "process-timeout": 0
   },
   "require": {
+    "elements/process-manager-bundle": "^4.3",
+    "pimcore/bundle-generator": "^1.0",
     "pimcore/data-hub": "^1.6",
     "pimcore/data-importer": "^1.8",
     "pimcore/pimcore": "^10.5"
@@ -22,7 +24,8 @@
   "autoload": {
     "psr-4": {
       "App\\": "src/",
-      "Pimcore\\Model\\DataObject\\": "var/classes/DataObject"
+      "Pimcore\\Model\\DataObject\\": "var/classes/DataObject",
+      "ProductExportBundle\\": "src/ProductExportBundle"
     }
   },
   "scripts": {
