--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,10 @@
 imports:
     - { resource: 'local/' }
 
-
 pimcore:
+    bundles:
+        search_paths:
+            - src/ProductExportBundle
 
 # IMPORTANT Notice!
 # Following there are only some examples listed, for a full list of possible options, please run the following command:
